compiler/tests/success/x86-64/clflush.jazz
export
fn flush(reg u64 p) {
  () = #CLFLUSH(p);
}
