compiler/tests/fail/slh/x86-64/msf_lval.jazz
export
fn main(reg u64 p) {
    [p] = #init_msf();
}
